# emerald

./: .gitignore
backend/: setup.sh  sql.sh
backend/libs/base-consumer/: .env.example  Cargo.toml
backend/libs/base-publisher/: Cargo.toml
backend/libs/sql/: events.sql  processed.sql
backend/services/api-document/: .env  .env.dev  .env.example  .gitignore  Dockerfile  dev.sh  docker-compose.yaml  main.py  package.json  pnpm-lock.yaml  requirements.txt
backend/services/api-editor/: dev.sh  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  server.ts
backend/services/api-factory/: .env  .env.example  Dockerfile  dev.sh  docker-compose.yaml  main.py  package.json  pnpm-lock.yaml  requirements.txt
backend/services/api-pubsub/: main.py  requeriments.txt
backend/services/base-consumer/: Cargo.toml
backend/services/base-consumer/src/: lib.rs  main.rs
backend/services/base-consumer/src/application/: consumer.rs  mod.rs
backend/services/base-consumer/src/config/: mod.rs
backend/services/base-publisher/: Cargo.toml  main.py
backend/services/base-publisher/src/: main.rs
backend/services/base-publisher/src/application/: publisher.rs
backend/services/document-api/: docker-compose.yaml
backend/services/document-processor/: docker-compose.yaml
backend/services/document-state/: docker-compose.yaml
backend/services/editor-snapshot/: docker-compose.yaml
desktop/: nuxt.config.ts  package-lock.json  package.json
trash/: .gitignore  requirements.txt
trash/editor/: index.html
trash/layers/: keywords_extraidas.json
(+217 files in other folders)
