[package]
name = "publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL — maneja reconexión automática via pool
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Apache Pulsar
pulsar = { version = "6", default-features = false, features = ["tokio-runtime"] }

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Manejo de errores
anyhow = "1"
dotenvy = "0.15.7"
validator = "0.20.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
